--- a/starter-analysis-exercise/products/report/starter-analysis-report.qmd
+++ b/starter-analysis-exercise/products/report/starter-analysis-report.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Manuscript/Report Template for a Data Analysis Project"
+title: "Starter Analysis Exercise Report"
 subtitle: ""
-author: Your Name
-date: today
+author: Ranni Tewfik
+date: 1/19/2024
 format:
   html:
     toc: false
@@ -12,11 +12,9 @@ bibliography: ../dataanalysis-template-references.bib
 csl: ../apa.csl
 ---
 
-The structure below is one possible setup for a data analysis project (including the course project). For a manuscript, adjust as needed. 
-You don't need to have exactly these sections, but the content covering those sections should be addressed.
+Chaohua Li contributed to this exercise.
 
 This uses MS Word as output format. [See here](https://quarto.org/docs/output-formats/ms-word.html) for more information. You can switch to other formats, like html or pdf. See [the Quarto documentation](https://quarto.org/) for other formats.
-
 
 ```{r, echo=FALSE, message=FALSE}
 # load a few R packages
@@ -24,25 +22,25 @@ library(here)
 library(knitr)
 ```
 
-
-
 # Summary/Abstract
-_Write a summary of your project._
 
+*Write a summary of your project.*
 
 {{< pagebreak >}}
 
-
-# Introduction 
+# Introduction
 
 ## General Background Information
-_Provide enough background on your topic that others can understand the why and how of your analysis_ 
+
+*Provide enough background on your topic that others can understand the why and how of your analysis*
 
 ## Description of data and data source
-_Describe what the data is, what it contains, where it is from, etc. Eventually this might be part of a methods section._
+
+*Describe what the data is, what it contains, where it is from, etc. Eventually this might be part of a methods section.*
 
 ## Questions/Hypotheses to be addressed
-_State the research questions you plan to answer with this analysis._
+
+*State the research questions you plan to answer with this analysis.*
 
 To cite other work (important everywhere, but likely happens first in introduction), make sure your references are in the bibtex file specified in the YAML header above (here `dataanalysis_template_references.bib`) and have the right bibtex key. Then you can include like this:
 
@@ -50,33 +48,29 @@ Examples of reproducible research projects can for instance be found in [@mckay2
 
 {{< pagebreak >}}
 
+# Methods
 
-# Methods 
-
-_Describe your methods. That should describe the data, the cleaning processes, and the analysis approaches. You might want to provide a shorter description here and all the details in the supplement._
-
+*Describe your methods. That should describe the data, the cleaning processes, and the analysis approaches. You might want to provide a shorter description here and all the details in the supplement.*
 
 ## Data aquisition
-_As applicable, explain where and how you got the data. If you directly import the data from an online source, you can combine this section with the next._
 
+*As applicable, explain where and how you got the data. If you directly import the data from an online source, you can combine this section with the next.*
 
 ## Data import and cleaning
-_Write code that reads in the file and cleans it so it's ready for analysis. Since this will be fairly long code for most datasets, it might be a good idea to have it in one or several R scripts. If that is the case, explain here briefly what kind of cleaning/processing you do, and provide more details and well documented code somewhere (e.g. as supplement in a paper). All materials, including files that contain code, should be commented well so everyone can follow along._
 
+*Write code that reads in the file and cleans it so it's ready for analysis. Since this will be fairly long code for most datasets, it might be a good idea to have it in one or several R scripts. If that is the case, explain here briefly what kind of cleaning/processing you do, and provide more details and well documented code somewhere (e.g. as supplement in a paper). All materials, including files that contain code, should be commented well so everyone can follow along.*
 
 ## Statistical analysis
-_Explain anything related to your statistical analyses._
 
+*Explain anything related to your statistical analyses.*
 
 {{< pagebreak >}}
-
 
 # Results
 
 ## Exploratory/Descriptive analysis
 
-_Use a combination of text/tables/figures to explore and describe your data. Show the most important descriptive results here. Additional ones should go in the supplement. Even more can be in the R and Quarto files that are part of your project._
-
+*Use a combination of text/tables/figures to explore and describe your data. Show the most important descriptive results here. Additional ones should go in the supplement. Even more can be in the R and Quarto files that are part of your project.*
 
 @tbl-summarytable shows a summary of the data.
 
@@ -90,12 +84,9 @@ resulttable=readRDS("../../results/tables-files/summarytable.rds")
 knitr::kable(resulttable)
 ```
 
-
-
 ## Basic statistical analysis
 
-_To get some further insight into your data, if reasonable you could compute simple statistics (e.g. simple models with 1 predictor) to look for associations between your outcome(s) and each individual predictor variable. Though note that unless you pre-specified the outcome and main exposure, any "p<0.05 means statistical significance" interpretation is not valid._
-
+*To get some further insight into your data, if reasonable you could compute simple statistics (e.g. simple models with 1 predictor) to look for associations between your outcome(s) and each individual predictor variable. Though note that unless you pre-specified the outcome and main exposure, any "p\<0.05 means statistical significance" interpretation is not valid.*
 
 @fig-result shows a scatterplot figure produced by one of the R scripts.
 
@@ -106,12 +97,11 @@ _To get some further insight into your data, if reasonable you could compute sim
 knitr::include_graphics(here("starter-analysis-exercise","results","figures","height-weight-stratified.png"))
 ```
 
-
 ## Full analysis
 
-_Use one or several suitable statistical/machine learning methods to analyze your data and to produce meaningful figures, tables, etc. This might again be code that is best placed in one or several separate R scripts that need to be well documented. You want the code to produce figures and data ready for display as tables, and save those. Then you load them here._
+*Use one or several suitable statistical/machine learning methods to analyze your data and to produce meaningful figures, tables, etc. This might again be code that is best placed in one or several separate R scripts that need to be well documented. You want the code to produce figures and data ready for display as tables, and save those. Then you load them here.*
 
-Example @tbl-resulttable2 shows a summary of a linear model fit.
+@tbl-resulttable2 shows a summary of a linear model fit.
 
 ```{r}
 #| label: tbl-resulttable2
@@ -121,33 +111,62 @@ resulttable2 = readRDS(here("starter-analysis-exercise","results","tables-files"
 knitr::kable(resulttable2)
 ```
 
-
 {{< pagebreak >}}
-
 
 # Discussion
 
 ## Summary and Interpretation
-_Summarize what you did, what you found and what it means._
+
+*Summarize what you did, what you found and what it means.*
 
 ## Strengths and Limitations
-_Discuss what you perceive as strengths and limitations of your analysis._
+
+*Discuss what you perceive as strengths and limitations of your analysis.*
 
 ## Conclusions
-_What are the main take-home messages?_
 
-_Include citations in your Rmd file using bibtex, the list of references will automatically be placed at the end_
+*What are the main take-home messages?*
 
-This paper [@leek2015] discusses types of analyses. 
+*Include citations in your Rmd file using bibtex, the list of references will automatically be placed at the end*
 
-These papers [@mckay2020; @mckay2020a] are good examples of papers published using a fully reproducible setup similar to the one shown in this template. 
+This paper [@leek2015] discusses types of analyses.
+
+These papers [@mckay2020; @mckay2020a] are good examples of papers published using a fully reproducible setup similar to the one shown in this template.
 
 Note that this cited reference will show up at the end of the document, the reference formatting is determined by the CSL file specified in the YAML header. Many more style files for almost any journal [are available](https://www.zotero.org/styles). You also specify the location of your bibtex reference file in the YAML. You can call your reference file anything you like, I just used the generic word `references.bib` but giving it a more descriptive name is probably better.
 
+# Class Exercise
+
+This exercise used data from 9 participants and investigated 5 variables: height, weight, gender, blood type, and IQ score.
+
+@fig-result2 shows a box plot figure with blood type on the x-axis and height on the y-axis. On average, blood type A has the shortest height, and blood types AB and B have the tallest height. The plots for blood types B and O are relatively normally distributed, whereas the plot for blood type A has a negative skew. Blood type AB does not show a box plot because of the small sample size, which is expected because type AB is the rarest blood type.
+
+```{r}
+#| label: fig-result2
+#| fig-cap: "Blood type and height."
+#| echo: FALSE
+knitr::include_graphics(here("starter-analysis-exercise","results","figures","Boxplot_Blood type-Height.png"))
+```
+
+@fig-result3 shows a scatter plot figure with weight on the x-axis and IQ score on the y-axis. The plot shows a reciprocal relationship between weight and IQ score: as weight increases, IQ score decreases. This observed association is expected based on studies that link obesity and lower IQ level.
+
+```{r}
+#| label: fig-result3
+#| fig-cap: "Weight and IQ score."
+#| echo: FALSE
+knitr::include_graphics(here("starter-analysis-exercise","results","figures","weight-IQ.png"))
+```
+
+@tbl-resulttable3 shows a summary of a linear model fit with height as the outcome and blood type and IQ score as the predictors. Neither blood type nor IQ score is significantly associated with height. The other variables (weight and gender) should be included in the model to see if they are better predictors of height.
+
+```{r}
+#| label: tbl-resulttable3
+#| tbl-cap: "Linear model fit table."
+#| echo: FALSE
+resulttable3 = readRDS(here("starter-analysis-exercise","results","tables-files","resulttable3.rds"))
+knitr::kable(resulttable3)
+```
 
 {{< pagebreak >}}
 
 # References
-
-
-
