--- a/coding-exercise/coding-exercise.qmd
+++ b/coding-exercise/coding-exercise.qmd
@@ -2,4 +2,126 @@
 title: "R Coding Exercise"
 ---
 
-Placeholder file for the future R coding exercise.
+
+## Part 1 - Loading and Checking Data
+
+```{r}
+#Load "dslabs" package
+library(dslabs)
+library(dplyr)
+
+#Look at help file for "gapminder"
+help(gapminder)
+
+#Get an overview of data structure
+str(gapminder)
+
+#Get a summary of data
+summary(gapminder)
+
+#Determine the type of object "gapminder" is
+class(gapminder)
+```
+
+
+## Part 2 - Processing Data
+
+```{r}
+#Assign only the African countries in "gapminder" to a new object
+africadata <- subset(gapminder, continent == "Africa")
+
+#Get an overview of data structure and data summary for "africadata"
+str(africadata)
+summary(africadata)
+
+#Create a new object that only contains infant mortality and life expectancy
+africadata1 <- africadata %>% select("infant_mortality", "life_expectancy")
+  
+#Create a new object that only contains population and life expectancy
+africadata2 <- africadata %>% select("population", "life_expectancy")
+
+#Get an overview of data structure and data summary for "africadata1" and "africadata2"
+str(africadata1)
+summary(africadata1)
+
+str(africadata2)
+summary(africadata2)
+```
+
+
+## Part 3 - Plotting
+
+```{r}
+#Plot life expectancy as a function of infant mortality
+plot(africadata1$infant_mortality, africadata1$life_expectancy)
+```
+
+
+There is a negative correlation between infant mortality and life expectancy.
+
+
+```{r}
+#Plot life expectancy as a function of population size
+plot(africadata2$population, africadata2$life_expectancy, log = "x")
+```
+
+
+There is a positive correlation between population size and life expectancy, however, there are streaks of data that seem to go together. This is because there are different years for individual countries, and that over time these countries increase in population size and also life expectancy.
+
+
+## Part 4 - More Data Processing
+
+```{r}
+#Figure out which years have missing data for infant mortality
+missing_infant_mortality <- africadata[is.na(africadata$infant_mortality),]
+
+#Create a new object by extracting only the data for the year 2000 from "africadata"
+africadata3 <- subset(africadata, year == "2000")
+
+#Get an overview of data structure and data summary for "africadata3"
+str(africadata3)
+summary(africadata3)
+```
+
+
+## Part 5 - More Plotting
+
+```{r}
+#Plot life expectancy as a function of infant mortality for the year 2000
+plot(africadata3$infant_mortality, africadata3$life_expectancy)
+```
+
+
+There is a negative correlation between infant mortality and life expectancy for the year 2000.
+
+
+```{r}
+#Plot life expectancy as a function of population size for the year 2000
+plot(africadata3$population, africadata3$life_expectancy, log = "x")
+```
+
+
+There is no noticeable correlation between population size and life expectancy for the year 2000.
+
+
+## Part 6 - Simple Model Fits
+
+```{r}
+#Fit life expectancy as the outcome and infant mortality as the predictor
+fit1 <- lm(life_expectancy ~ infant_mortality, data = africadata3)
+summary(fit1)
+```
+
+
+For the year 2000, infant mortality is significantly associated with life expectancy (p-value < 0.001), however, the low R-squared value indicates that only 47% of the variation in life expectancy is explained by the model with only infant mortality as a predictor.
+
+
+```{r}
+#Fit life expectancy as the outcome and population size as the predictor
+fit2 <- lm(life_expectancy ~ population, data = africadata3)
+summary(fit2)
+```
+
+
+For the year 2000, population size is not significantly associated with life expectancy (p-value = 0.62), and the very low R-squared value indicates that only 0.52% of the variation in life expectancy is explained by the model with only population size as a predictor.
+
